--- a/app/css/aboutMe.css
+++ b/app/css/aboutMe.css
@@ -14,111 +14,132 @@
 #SM_foto{
 
     width: 951px;
-    height: 674px;
+    height: 800px;
     
-    grid-row: 2/6;
-    grid-column: 6/11;
-
+    grid-row: 1/6;
+    grid-column: 1/6;
+    margin-top: 100px;
+    margin-left: 100px;
 
 
     background-image: url('../src/images/SobreMi_edit.png');
-    background-attachment:unset;
+    background-attachment:fixed;
     background-position: center;
     background-repeat:no-repeat;
     background-size:contain;
-    background-position-x:75%;
+    background-position-x:-20%;
 }
 
 
 
 /* Sobre mi */
 
-#sobreMi > h1{
+
+
+#sobreMi > h2{
     width:max-content;
     height: min-content;
 
-    grid-row: 3;
-    grid-column: 3/6;
-
-    margin: 0px;
+    grid-row: 2/6;
+    grid-column: 7/12;
+    z-index: 10000;
 
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 96px;
+    font-size: 90px;
 
-    display: flex;
-    align-items: center;
-
-    color: var(--color-secundario);
-}
-
-
-/* Line 1 */
-
-#sobreMi > #SM_Barra{
-    width: 1700px;
-    height: 0px;
-
-    grid-row: 6;
-    grid-column: 3/12;
-
-    border: 10px solid rgba(69, 132, 125, 0.5);
-    filter: blur(10px);
-}
-
-#sobreMi  #SM_Barrafondo{
-    width:759px;
-    height: 358px;
+    margin-top: 120px;
     
-    top: -11px;
-    position: fixed;
+    writing-mode: vertical-rl;
+    transform: rotate(210deg) !important;
 
-    grid-row: 4/6;
-    grid-column: 2/12;
+    color: #b88c13;
+}
+#sobreMi > h3{
+    width:max-content;
+    height: min-content;
 
-    border: 4px solid rgba(69, 132, 125, 0.6);
-    filter: blur(2px);
+    grid-row: 2/6;
+    grid-column: 8/12;
+    z-index: 10000;
+
+    margin-top: 120px;
+    margin-left: 115px;
+
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 90px;
+    
+    writing-mode: vertical-rl;
+    transform: rotate(210deg);
+
+    color: #cca22e;
+}
+#sobreMi > h4{
+    width:max-content;
+    height: min-content;
+
+    grid-row: 2/6;
+    grid-column:9/12;
+    z-index: 10000;
+    margin-top: 120px;
+
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 90px;
+    
+    writing-mode: vertical-rl;
+    transform: rotate(210deg);
+
+    color: #e4b533;
 }
 
 
 /* Rectangle 1 */
 #sobreMi #SM_text{
 
-    width: 40vw;
-    height: 364px;
-   
+    width: 100%;
+    height: 68px;
 
-    grid-row: 4/6;
-    grid-column: 3/12;
+    grid-row: 1;
+    grid-column: 1/12;
+
+    margin-left: 50px;
+    margin-top: 70px;
 
     background-color: rgba(69, 132, 125, 0.25) ;
     
     backdrop-filter: blur(10px);
 
-    /* Note: backdrop-filter has minimal browser support */
+    text-align: center;
 }
 
-#SM_text > p{
+#SM_text > h1{
+    width:100%;
+    height: 100%;
 
-    width: fit-content;
-    height: fit-content;
-  
-    grid-row: 4/6;
-    grid-column: 3/10;
-
-    font-family: 'Roboto Slab';
+    z-index: 10000;
+    
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-style: normal;
-    font-weight: 100;
-    font-size: 115%;
-    line-height: 2em;
-    text-align: justify;
+    font-weight: 400;
+    font-size: 90px;
 
-    margin:0px;
+    margin-top: -22px;
 
-    padding: 2%;
-
-    color: #FFFFFF;
-
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 1);
+    color: #000000;
 }
+
+#sobreMi h2, h3, h4 {
+    opacity: 0; /* El texto es invisible al inicio */
+    transform: translateY(20px); /* Mueve ligeramente hacia abajo */
+    transition: opacity 1s ease, transform 1s ease; /* Transición suave */
+  }
+  
+  #sobreMi  h2.show, h3.show, h4.show {
+    opacity: 1; /* Hace visible el texto */
+    transform: translateY(0); /* Restaura su posición original */
+  }
